- Polling performance increased
- Fix: SYS_SERVICE_DOWN event was generated in place of SYS_SERVICE_UNKNOWN
- nxadm completely rewritten, and now allows to execute any command
  available on server console in standalone mode
- Windows console: 
	- Implemented desktop configuration save and restore
	- Added possibility to change graph's time frame
	- Added support for multiple DCIs on one graph
	- Many small UI improvements


*
* 0.1.17
*

- Templates can be manually applied
- Fixed issue #0000021 (agent crash on multiprocessor Solaris systems)
- Fixed issue #0000022 (server can crash after unsuccessfull interface
  configuration poll)
- Fixed bug in filling DCI cache with values from database
- Server now can save and restore last DCI poll time and raw value
  across restarts


*
* 0.1.16
*

- Added System.CPU.Usage(*), System.CPU.Usage5(*) and System.CPU.Usage15(*)
  parameters to WinPerf subagent
- Fixed issue #0000015 (unable to modify network service port number)
- Fixed server crash sometimes caused by DCI deletion
- Fixed issue #0000017 (server crash after DCI copy)
- Fixed memory leaks in DCI cache management
- Added interface for processing SNMP traps by server modules
- Added internal parameters AgentStatus and ChildStatus(*)
- Fixed issue #0000018 (incorrect aliases handling by FreeBSD subagent)
- Some GUI improvements
- Parameters Net.Interface.AdminStatus(*) and Net.Interface.Link(*) added
  to FreeBSD subagent


*
* 0.1.15
*

- DCI housekeeping implemented
- Fixed server crash at forced poll time
- Fixed critical bug in upgrade script starter under UNIX
- Added support of HDD temperature monitoring under Windows and Linux
- Added PhysicalDisk.Model, PhysicalDisk.SerialNumber and
  PhysicalDisk.Firmware parameters under Windows
- Added parameters System.CPU.Count, System.CPU.Usage*, System.KStat(*)
  and System.Memory.Physical.* to Solaris subagent
- Parameters System.Memory.Swap.* removed from Windows agent because they
  are meaningless under Windows