@@ -69,7 +69,7 @@ static DWORD WINAPI LoginThread(void *pArg)
    HWND hWnd = *((HWND *)pArg);    // Handle to status window
    DWORD dwResult;
 
-   dwResult = NXCConnect(g_szServer, g_szLogin, g_szPassword, &g_hSession);
+   dwResult = NXCConnect(g_szServer, g_szLogin, g_szPassword, &g_hSession, FALSE);
 
    // If successful, load container objects' categories
    if (dwResult == RCC_SUCCESS)
