@@ -26,6 +26,7 @@ CLoginDialog::CLoginDialog(CWnd* pParent /*=NULL*/)
 	m_szServer = _T("");
 	m_iEncryption = -1;
 	m_bClearCache = FALSE;
+	m_bMatchVersion = FALSE;
 	//}}AFX_DATA_INIT
 
    lb.lbColor = 0;
@@ -52,6 +53,7 @@ void CLoginDialog::DoDataExchange(CDataExchange* pDX)
 	DDV_MaxChars(pDX, m_szServer, 64);
 	DDX_Radio(pDX, IDC_RADIO_CLEAR, m_iEncryption);
 	DDX_Check(pDX, IDC_CHECK_CACHE, m_bClearCache);
+	DDX_Check(pDX, IDC_CHECK_VERSION_MATCH, m_bMatchVersion);
 	//}}AFX_DATA_MAP
 }
 
