@@ -614,6 +614,10 @@ SOURCE=.\NetSummaryFrame.h
 # End Source File
 # Begin Source File
 
+SOURCE="..\..\..\include\netxms-version.h"
+# End Source File
+# Begin Source File
+
 SOURCE=.\NewActionDlg.h
 # End Source File
 # Begin Source File
