@@ -166,9 +166,10 @@ const TCHAR LIBNXCL_EXPORTABLE *NXCGetErrorText(DWORD dwError)
       _T("Server resource busy"),
       _T("Invalid package ID"),
       _T("Invalid IP address"),
-      _T("Action is used in event processing policy")
+      _T("Action is used in event processing policy"),
+      _T("Server uses incompatible version of communication protocol")
    };
-   return ((dwError >= 0) && (dwError <= RCC_ACTION_IN_USE)) ? pszErrorText[dwError] : _T("Unknown error code");
+   return ((dwError >= 0) && (dwError <= RCC_BAD_PROTOCOL)) ? pszErrorText[dwError] : _T("Unknown error code");
 }
 
 
