@@ -823,6 +823,7 @@ void ClientSession::SendServerInfo(DWORD dwRqId)
    msg.SetVariable(VID_SERVER_VERSION, NETXMS_VERSION_STRING);
    msg.SetVariable(VID_SERVER_ID, (BYTE *)&g_qwServerId, sizeof(QWORD));
    msg.SetVariable(VID_SUPPORTED_ENCRYPTION, (DWORD)0);
+   msg.SetVariable(VID_PROTOCOL_VERSION, (DWORD)CLIENT_PROTOCOL_VERSION);
 
    // Send responce
    SendMessage(&msg);
